fix image distortion

--- a/style.css
+++ b/style.css
@@ -50,6 +50,6 @@ button:hover {
 }
 img,
 canvas {
-  max-width: 50%;
+  width: 50%;
   height: auto;
 }
